# kraken-api

./: Cargo.toml  README.md
examples/: balances.rs  transactions.rs
src/: auth.rs  client.rs  constant.rs  error.rs  lib.rs  prelude.rs  request.rs  response.rs
